# pkg-control

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  CONTRIBUTING.md  COPYING  DESCRIPTION  INDEX  Makefile  NEWS  ONEWS  README.md  feedback.m  io.github.gnu_octave.pkg-control.metainfo.xml  octave-control.metainfo.xml  post_install.m  pre_install.m
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: control-package-bug.md  control-package-fetarure.md  control-package.md
.github/PULL_REQUEST_TEMPLATE/: pull-request.md  pull_request.md
devel/: Bestimmung_Regelparameter_Ziegler_Nichols_gz.m  INFO  MDSSystem.m  MDSSystem2.m  Makefile.ReferenceLapack  PROJECTS  README.md  RELEASE_PACKAGE  VLFamp.m  Verica.m  __adjust_frd_data__.m  __dss_bilin__.m  __frd_dim__.m  __frequency_response_2__.m  __frequency_vector_2__.m  __iddata_dim__.m  __match_key__.m  __sys2ss__.m  __tf2ss__.m  __time_response_2__.m  algebraic_loops.m  anderson.m  array_position.m  augstate.m  balancmr.m  balred.m  bode2.m  bode2test.m  bstmr.m  bug_arrayfun.m  bug_mimo_tf.m  bug_minreal.m  bug_plotting.m  bug_rlocus.m  ctrbf.m  d2d.m  db2mag.m  dlqe.m  filt.m  fixme_connect.m  (+78 more)
devel/@frd/: __c2d__.m  __freqresp__.m  __get__.m  __minreal__.m  __pole__.m  __set__.m  __sys2ss__.m  __sys2tf__.m  __sys_connect__.m  __sys_data__.m  __sys_group__.m  __sys_inverse__.m  __sys_prune__.m  __times__.m  __transpose__.m  __zero__.m  display.m  frd.m
devel/@iddata/: iddata.m  size.m
devel/@lti/: __lti_horzcat__.m  __lti_vertcat__.m  repmat.m  repsys.m  times.m
devel/@ss/: __times__.m
devel/@tf/: horzcat.m  times.m  vertcat.m
devel/bugs/: bug_mimo_tf.m  bug_minreal.m  bug_rlocus.m  bug_step.m  mimo_tf_mpower.m
devel/ctrbf/: makefile_ctrbf.m  test_ctrbf.m
devel/doc/: build_demos.m  control.css  control.texi  copying.texi  docs_html.m  fix_seealso.pl  mkfuncdocs.py  mkqhcp.py
devel/examples/: Verica.m  bruce_minaker.m  hex9.m  multiplot.m  multiplot3.m
devel/ncfsyn/: makefile_ncfsyn.m  ncfsyn.m  slsb10id.cc  slsb10kd.cc
devel/pdfdoc/: GENERATE_PDF  control.tex  doc.tex  function_doc.m  functions.texi  usage.txt
devel/release/: release.md
devel/scale/: TB01ID.html  makefile_scale.m  prescale.m  scale.m  sltg01ad.cc
devel/slred/: reduction_methods.txt
devel/ss2tf/: TB04BD.html  makefile_ss2tf.m  sltb04bd.cc  test_ss2tf.m
devel/tests/: frd_display.m  lsimtest.m  scaled_discretization.m  test_d2c.m  test_dss2ss.m  test_dss_bilin.m  test_frd.m  test_inv.m  test_lsim.m  test_rga.m  test_ss2tf.m  test_sumblk.m  test_tf.m  test_tf2dss.m  test_tf_freqresp.m  test_tustin.m
devel/tf2ss/: TD04AD.html  common.cc  makefile_tf2ss.m  sltd04ad.cc  test_tf2ss.m  tf2ss.m
devel/utils/: makefile_control.m  rss.m
devel/wip/: PROJECTS  __sys2ss__.m  balancmr.m  bstmr.m  sl_td04ad.cc  step_function.m
doc/: Makefile  NEWS  control.tex  control.texi  control.txi  copying.texi  documentation.html  fix_seealso.pl  functions.texi  macros.texi  mkfuncdocs.py  mkfunctexifix.pl  octave_forge_specific_api.txt  references.txt  slicot_readme.txt
doc/SLICOT/: README.md
doc/slicot/: README.md
docs/: @frd_frd.html  @iddata_cat.html  @iddata_detrend.html  @iddata_diff.html  @iddata_end.html  @iddata_fft.html  @iddata_filter.html  @iddata_get.html  @iddata_horzcat.html  @iddata_iddata.html  @iddata_ifft.html  @iddata_merge.html  @iddata_nkshift.html  @iddata_plot.html  @iddata_resample.html  @iddata_set.html  @iddata_size.html  @iddata_subsasgn.html  @iddata_subsref.html  @iddata_vertcat.html  @lti_blkdiag.html  @lti_c2d.html  @lti_connect.html  @lti_ctranspose.html  @lti_d2c.html  @lti_d2d.html  @lti_dcgain.html  @lti_dssdata.html  @lti_end.html  @lti_feedback.html  @lti_filtdata.html  @lti_frdata.html  @lti_freqresp.html  @lti_get.html  @lti_horzcat.html  @lti_inv.html  @lti_isct.html  @lti_isdt.html  @lti_isminimumphase.html  @lti_issiso.html  (+145 more)
inst/: Anderson.m  BMWengine.m  Boeing707.m  DEMOcontrol.m  MDSSystem.m  Madievski.m  VLFamp.m  WestlandLynx.m  __abcddims__.m  __adjust_frd_data__.m  __adjust_iddata__.m  __adjust_iddata_tsam__.m  __adjust_labels__.m  __adjust_ss_data__.m  __adjust_tf_data__.m  __axis2dlim__.m  __axis_limits__.m  __axis_margin__.m  __bodquist__.m  __check_name_numel__.m  __checkname__.m  __conred_check_feedback_sign__.m  __conred_sb16ad__.m  __control_args__.m  __conv2tfpolycell__.m  __dss2ss__.m  __dss_bilin__.m  __frd_dim__.m  __freqbounds__.m  __freqresp__.m  __frequency_range__.m  __frequency_response__.m  __frequency_vector__.m  __getfreqresp__.m  __iddata_dim__.m  __is_stable__.m  __labels__.m  __mark_empty_names__.m  __markemptynames__.m  __match_key__.m  (+271 more)
inst/@frd/: __c2d__.m  __ctranspose__.m  __d2c__.m  __freqresp__.m  __get__.m  __pole__.m  (+17 more)
src/: AB08NX.fortran  AG08BY.fortran  Makefile  Makefile.conf.in  ODLTZM.fortran  SB01BY.fortran  SB01FY.fortran  SB03MD.f  SB04OD.fortran  SB06ND.fortran  SG03AD.fortran  SG03BD.fortran  TB01MD.fortran  TB01ND.fortran  TB01ZD.f  TB01ZD.fortran  TG04BX.f  TG04BX.fortran  __control_helper_functions__.cc  __control_slicot_functions__.cc  __lti_input_idx__.cc  bootstrap  common.cc  common.h  configure.ac  control_slicot_functions.cc  is_matrix.cc  is_real_matrix.cc  is_real_scalar.cc  is_real_square_matrix.cc  is_real_vector.cc  is_ss_mat.cc  is_vector.cc  is_zp_vector.cc  lti_input_idx.cc  makefile.slicot  makefile_all.m  makefile_chol.m  makefile_h2syn.m  makefile_hankel.m  (+105 more)
src/m4/: octave-forge.m4
src/slicot/: README.md
src/src_aux/: README.md
(+185 files in other folders)
